--- a/GymRats.html
+++ b/GymRats.html
@@ -406,7 +406,7 @@ Então muito obg de verdade, como já falei tenho muito a melhorar, mais sei que
           <!-- Instrutor 1 -->
           <div class="w-full flex-shrink-0 p-6 flex flex-col items-center">
             <div class="instructor-image mb-4">
-              <img src="./imgs/LaraMini.png" alt="Lara">
+              <img src="./imgs/LaraMini.png" alt="LaraMini">
             </div>
             <div class="text-center">
               <h3 class="text-3xl gradientText fjalla-one-regular leading-none mb-3">
@@ -420,7 +420,7 @@ Então muito obg de verdade, como já falei tenho muito a melhorar, mais sei que
           <!-- Instrutor 2 -->
           <div class="w-full flex-shrink-0 p-6 flex flex-col items-center">
             <div class="instructor-image mb-4">
-              <img src="./imgs/GabiMini.png" alt="Raynara">
+              <img src="./imgs/GabiMini.png" alt="GabiMini">
             </div>
             <div class="text-center">
               <h3 class="text-3xl gradientText fjalla-one-regular leading-none mb-3">
@@ -438,7 +438,7 @@ Então muito obg de verdade, como já falei tenho muito a melhorar, mais sei que
           <!-- Instrutor 3 -->
           <div class="w-full flex-shrink-0 p-6 flex flex-col items-center">
             <div class="instructor-image mb-4">
-              <img src="./imgs/NathMini.png" alt="Lara">
+              <img src="./imgs/NathMini.png" alt="NathMini">
             </div>
             <div class="text-center">
               <h3 class="text-3xl gradientText fjalla-one-regular leading-none mb-3">
