--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Desafio Gym Rats</title>
-    <meta http-equiv="refresh" content="1;url=http://gymrats.com.br/gymrats.html">
+    <meta http-equiv="refresh" content="1;url=http://gymrats.com.br/GymRats.html">
     <link rel="stylesheet" href="style2.css">
 </head>
 <body>
